@startuml Node Architecture
skinparam componentStyle rectangle

package "Node Module" {
  [Signum] as Signum
  [ProfileConfig] as ProfileConfig
  [NodeLifecycleManager] as LifecycleMgr
  [BlockchainProcessorImpl] as BlockchainProc
  [NodeLoggingProvider] as LoggingProv
  [NodeCoreContext] as NodeCoreCtx
}

package "Config System" {
  [ModuleConfigPath] as ConfigPath
  [PropertiesService] as PropsSvc
  [LoggingProfileManager] as LogMgr
}

package "Resources (JAR)" {
  ["/conf/node/profiles/\nprofile-default.properties"] as NodeDef
  ["/conf/node/logging/\nlogging-default.properties"] as LogDef
}

package "Runtime (User)" {
  ["conf/node/{profile}.properties"] as UserNode
  ["conf/node/logging.properties"] as UserLog
}

package "Logging Framework" {
  interface ModuleLogger
  abstract LoggerImpl
  [SystemLogger\n(Singleton)] as SystemLogger
  [ProfileLogger\n(Per-Profile)] as ProfileLogger
  
  ModuleLogger ..|> LoggerImpl
  LoggerImpl <|-- SystemLogger
  LoggerImpl <|-- ProfileLogger
}

package "Legacy - Deprecated" {
  [ProfileLogRouter\n@Deprecated] as ProfileLogRouter
  [ProfileThreadContext\n@Deprecated] as ProfileThreadCtx
  [ProfileLogContext\n@Deprecated] as ProfileLogCtx
}

package "GUI Consoles" {
  [SystemConsoleSubscriber] as SysConsole
  [ProfileConsoleSubscriber] as ProfConsole
}

' Config Resolution
Signum --> ConfigPath
ConfigPath --> NodeDef
ConfigPath --> LogDef
ConfigPath --> UserNode
ConfigPath --> UserLog
LoggingProv --> LogMgr
LifecycleMgr --> PropsSvc
ProfileConfig --> ConfigPath

' Logging Architecture
NodeCoreCtx --> ProfileLogger
SystemLogger --> SysConsole
ProfileLogger --> ProfConsole

' Legacy Bridge (Deprecated)
ProfileLogRouter ..> SystemLogger : JUL Bridge
ProfileThreadCtx ..> ProfileLogRouter : MDC Routing
ProfileLogCtx ..> ProfileLogRouter : Subscriber Registry

@enduml